--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: Poppins, sans-serif;
     text-align: center;
     margin-top: 100px;
-    background-image: url(architecture-ancient-monument-world-heritage-day-celebration.jpg);
+    background-image: url(fuji-mounth.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
