--- a/style.css
+++ b/style.css
@@ -2,19 +2,17 @@
 body {
     font-family: Poppins, sans-serif;
     text-align: center;
-    margin-top: 100px;
     background-image: url(fuji-mounth.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-
   }
   html{
         font-size: 62.5%; 
   }
   h1{
     color: white;
-    font-size: 10rem;
+    font-size: 8rem;
   }
   input::placeholder{
     color: gray;
@@ -23,9 +21,9 @@ body {
     background-color: gray;
     color: white;
     border: none;
-    font-size: 18px;
-    padding: 10px;
-    margin: 5px;
+    font-size: 1.8rem;
+    padding: 1rem;
+    margin-right: 2rem;
   }
   button {
     padding: 1.2rem;
@@ -33,8 +31,24 @@ body {
     color: white;
     border: none;
   }
+  button:active{
+    background-color: black;
+  }
   #timer {
     font-size: 10rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     color: white;
+  }
+  .container{
+    display: block;
+    justify-content: center;
+    align-items: center;
+  }
+  @media (max-width: 900px){
+    html{
+      font-size: 53%;
+    }
+    h1{
+      font-size: 5rem;
+    }
   }
