foto boyutu azaltıldı

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: Poppins, sans-serif;
     text-align: center;
-    background-image: url(fuji-mounth.jpg);
+    background-image: url(fuji-mountain.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
