--- a/style.css
+++ b/style.css
@@ -82,12 +82,14 @@ body {
     font-size: 1.8rem;
     padding: 1rem;
     margin-right: 2rem;
+    border-radius: 0.5rem;
   }
   .start {
     padding: 1.2rem;
     background-color: gray;
     color: white;
     border: none;
+    border-radius: 0.5rem;
   }
   .start:active{
     background-color: black;
