--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   html{
         font-size: 62.5%; 
         overflow-x: hidden;
-
+        overflow-y: hidden;
   }
   h1{
     color: white;
