--- a/style.css
+++ b/style.css
@@ -68,6 +68,15 @@ body {
         overflow-x: hidden;
         overflow-y: hidden;
   }
+  .duraklat-btn{
+    padding: 1rem 1rem;
+    border-radius: 0.5rem;
+    font-size: 2rem;
+    background-color: gray;
+    color: white;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
   h1{
     color: white;
     font-size: 6rem;
@@ -75,7 +84,8 @@ body {
     text-align: center;
   }
   .timer::placeholder{
-    color: gray;
+    color: white;
+    opacity: 0.7;
   }
   .timer{
     background-color: gray;
