--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ h1 {
   display: flex;
   flex-direction: column;
   list-style-type: none;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 
@@ -244,7 +244,97 @@ h1 {
   display: none;
 }
 
+.to-do-list-btn{
+  border: none;
+  background-color: var(--gray-color);
+  color: var(--white-color);
+  margin-bottom: 2rem;
+  cursor: pointer;
+  font-size: 5rem;
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+}
+
+.todo-list-big-container{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
+.addBtn {
+  padding: 10px 15px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.todoInput[type="text"] {
+  width: 60%;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+.addBtn:hover {
+  background-color: #0056b3;
+}
+#todoList {
+  margin-top: 20px;
+  list-style-type: none;
+  padding: 0;
+}
+
+#todoList li {
+  font-style: normal;
+  white-space: normal;
+  text-align: start;
+  word-wrap: break-word;
+  font-size: 1.5rem;
+  padding: 1rem 2.5rem;
+  margin: 5px 0;
+  background-color: #fff;
+  border-left: 4px solid #007bff;
+  padding-left: 10px;
+  position: relative;
+}
+
+#todoList li::before {
+  content: '"';
+  position: absolute;
+  left: -15px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#todoList li::after {
+  content: '"';
+  position: absolute;
+  right: -15px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.delete-btn {
+  position: absolute;
+  right: 10px;
+  top: 8px;
+  background-color: transparent;
+  border: none;
+  color: red;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
+
+
+
+
 @media (max-width: 900px) {
+  .to-do-list-btn,
   .tema,
   .background {
     font-size: 3rem;
